Update MM and CI

--- a/about_us.html
+++ b/about_us.html
@@ -16,7 +16,7 @@
         <div class="dropdown">
             <button class="dropbtn">LIST<i class="fa fa-caret-down"></i></button>
             <div class="dropdown-content">
-                <a href="Shepard_tone.html">Shepard's Tone</a>
+                <a href="Shepard_tone.html">Shepard's Tones</a>
                 <a href="Octave_illusion.php">Octave Illusion</a>
                 <a href="Scale_illusion.html">Scale Illusion</a>
                 <a href="Mysterious_melody.php">Mysterious Melody</a>
