Update MM and CI

--- a/Continuity_illusion.html
+++ b/Continuity_illusion.html
@@ -18,7 +18,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="Shepard_tone.html">Shepard's Tone</a>
+                <a href="Shepard_tone.html">Shepard's Tones</a>
                 <a href="Octave_illusion.php">Octave Illusion</a>
                 <a href="Scale_illusion.html">Scale Illusion</a>
                 <a href="Mysterious_melody.php">Mysterious Melody</a>
@@ -41,7 +41,7 @@
             <p>
                 <b>What is it?</b>
                 <br>
-                The continuity illusion takes place when a gap in a discontinuous auditory stimulus is filled with “noise”. As the name suggests, the stimulus is misperceived to be continuous. This stimulus can be anything from a simple pure tone to more complex music or speech. [ ]
+                The continuity illusion takes place when a gap in a discontinuous auditory stimulus is filled with “noise”. As the name suggests, the stimulus is misperceived to be continuous. This stimulus can be anything from a simple pure tone to more complex music or speech. <sup>1</sup>
                 <br>
                 <br>
                 <audio controls>
@@ -49,42 +49,58 @@
                 </audio>
                 <br>
                 <br>
-                <img src="img/con1.png">
-                <br>
-                Noise is the word we use for unwanted sounds that interferes with our hearing of sounds of interest.
+                Noise is the word we use for unwanted sounds that interfere with our hearing of sounds of interest. Without noise, when silence fills the gap, the continuity illusion cannot occur. <sup>2</sup>
                 <br>
                 <br>
                 <br>
-                <b>How does it work?</b>
+                <b>What mechanism underlie the illusion?</b>
                 <br>
-                Understanding the neural mechanisms underlying the continuity illusion is currently a research focus. 
-                Also referred to as auditory induction or temporal restoration, this illusion is demonstrated across a wide range of species and is a well-conserved mechanism enabling us to make sense of sounds of interest when disrupted by immaterial background noise. 
-                Hence, unlike many other auditory illusions, the continuity illusion serves an important function in organisms.
+                When listening to a friend speak in a noisy room, we can make sense of what they say even when parts of words are obscured by the background noise. One enabler of this is the continuity illusion.
                 <br>
                 <br>
-                For example, when listening to a friend speak in a noisy room, we can make sense of what they say even when parts of words are obscured by the background noise. 
+                Evidence shows ‘top-down’ expectations are important in modulating this process – this means what you hear is in part determined by what you expect to hear! These expectations are based on your previous experiences.
                 <br>
                 <br>
-                Evidence shows top-down expectations are important in modulating this process - the illusion is stronger when listening to discontinuous words or familiar songs over unfamiliar songs or ‘pseudowords’. Data from a 2013 study suggests communication between the auditory cortex and memory centres (in the right medial temporal lobe and basal region) is important in facilitating the illusion in these cases. It seems you hear what you think you will hear! 
-                However, while higher brain regions are recruited to maintain more complicated precepts like illusory music, it seems oftentimes the illusion can be maintained by early auditory cortical processing alone.
-                In a 2007 study involving macaque monkeys it was found that the responses of neurons in the primary auditory cortex were the same for both interrupted and continuous tones – in both cases the neurons responded as if the noise was continuous! The same thing was seen in 2016 with EEG analysis of the brainstem. It has also been demonstrated that the illusion can take place regardless of whether the listener is paying close attention to the interrupted sound.
+                For example, studies have shown the continuity illusion is more prominent when listening to discontinuous known words than ‘psuedowords’, which are meaningless word-like sounds. <sup>3</sup>
+                Similarly, gaps in familiar songs are more often overlooked than within unfamiliar songs. <sup>4</sup>
+                Communication between the auditory cortex and memory centres (in the right medial temporal lobe and basal region) facilitates the illusion in these cases. <sup>5</sup>
+                In summary, you hear a song with gaps throughout but you already know the words; your memory of the song is used to ‘fill-in’ the missing sound and you believe the lyrics are continuous!
                 <br>
                 <br>
-                We know induction is strongest when the noise filling the interval contains energy at the frequency of the sound to be restored, and induction cannot occur if the interval is silent.
-                Lastly, listeners have a higher tendency to experience phantom sounds when a certain type of brainwave, alpha oscillations, are reduced. It has been suggested that cortical alpha waves play a part in selective auditory inhibition, allowing us to extract the useful information from noisy sound signals.
+                While higher brain regions are recruited to maintain complicated percepts, like in the case of illusory music described above, oftentimes the illusion can be maintained by early auditory cortical processing alone. 
+                A 2007 study using monkeys found that the responses of neurons in the primary auditory cortex were identical for both interrupted and continuous tones – in both cases the neurons responded as if the noise was continuous. <sup>2</sup> 
+                The same thing was seen in 2016 with EEG analysis of the brainstem. <sup>6</sup>
+                Furthermore, it has been demonstrated that the illusion may occur regardless of whether the listener is paying close attention to the interrupted sound or not. <sup>7</sup>
                 <br>
                 <br>
-                <img src="img/con2.png">
-                <br>
-                Illustrated here, the auditory cortex is currently divided into the following divisions;
-                The primary auditory cortex (A1)
-                The belt or secondary auditory cortex (A2)
-                The parabelt or tertiary auditory cortex (A3)
+                With so many mechanisms in place to uphold this illusion it is clear it must serve a useful purpose to organisms. 
+                In fact the continuity illusion (also referred to as auditory induction or temporal restoration) is demonstrated across a wide range of species and is a well-conserved tool that enables us to make sense of sounds of interest when disrupted by immaterial background noise. 
+                This distinguishes it from other illusions, which may just be fascinating peculiarities, as it has been directly selected for and preserved throughout our evolution.
                 <br>
                 <br>
                 <b>Future applications of research in this area?</b>
                 <br>
-                One prospective application of auditory induction research may be to further elucidate the pathophysiology underlying tinnitus, which is the tendency to hear phantom sounds. Similarly to as seen in the continuity illusion, tinnitus patients often show reduced alpha wave activity, however little is known about what role this plays within the pathogenesis. 
+                Understanding the neural mechanisms underlying the continuity illusion remains a research focus. One prospective application of this research may be to further elucidate the pathophysiology underlying tinnitus, a disorder in which a person has an increased tendency to hear phantom sounds.
+                <br>
+                <br>
+                In continuity illusion studies it has been seen that listeners have a higher tendency to experience phantom sounds when a certain type of brainwave, alpha oscillations, are reduced. <sup>5</sup>
+                It has been suggested that cortical alpha waves play a role in selective auditory inhibition, allowing us to extract the useful information from noisy sound signals.  
+                Interestingly, reduced alpha wave activity is also observed in tinnitus patients however little is known about what role this plays within the pathogenesis. <sup>8</sup>
+                <br>
+                <br>
+                <br>
+                <b>References</b>
+                <ol>
+                    <li>Warren, R.M., Obusek, C.J. and Ackroff, J.M., 1972. Auditory induction: Perceptual synthesis of absent sounds. Science, 176(4039), pp.1149-1151.</li>
+                    <li>Petkov, C.I., O'Connor, K.N. and Sutter, M.L., 2007. Encoding of illusory continuity in primary auditory cortex. Neuron, 54(1), pp.153-165.</li>
+                    <li>Samuel, A.G., 1981. Phonemic restoration: insights from a new methodology. Journal of Experimental Psychology: General, 110(4), p.474.</li>
+                    <li>Kraemer, D.J., Macrae, C.N., Green, A.E. and Kelley, W.M., 2005. Sound of silence activates auditory cortex. Nature, 434(7030), pp.158-158.</li>
+                    <li>Müller, N., Keil, J., Obleser, J., Schulz, H., Grunwald, T., Bernays, R.L., Huppertz, H.J. and Weisz, N., 2013. You can't stop the music: Reduced auditory alpha power and coupling between auditory and memory regions facilitate the illusory perception of music during noise. Neuroimage, 79, pp.383-393.</li>
+                    <li>Bidelman, G.M. and Patro, C., 2016. Auditory perceptual restoration and illusory continuity correlates in the human brainstem. Brain research, 1646, pp.84-90.</li>
+                    <li>Micheyl, C., Carlyon, R.P., Shtyrov, Y., Hauk, O., Dodson, T. and Pullvermüller, F., 2003. The neurophysiological basis of the auditory continuity illusion: a mismatch negativity study. Journal of cognitive neuroscience, 15(5), pp.747-758.
+                    </li>
+                    <li>Müller, N., Lorenz, I., Langguth, B. and Weisz, N., 2013. rTMS induced tinnitus relief is related to an increase in auditory cortical alpha activity. PloS one, 8(2).</li>
+                </ol>
                 
             </p>
         </div>
