--- a/Binaural_beats.html
+++ b/Binaural_beats.html
@@ -18,7 +18,7 @@
         <div class="dropdown">
             <button class="dropbtn">LIST<i class="fa fa-caret-down"></i></button>
             <div class="dropdown-content">
-                <a href="Shepard_tone.html">Shepard's Tone</a>
+                <a href="Shepard_tone.html">Shepard's Tones</a>
                 <a href="Octave_illusion.php">Octave Illusion</a>
                 <a href="Scale_illusion.html">Scale Illusion</a>
                 <a href="Mysterious_melody.php">Mysterious Melody</a>
@@ -118,7 +118,7 @@
                 <br>
                 <br>
                 Many experiments have now been conducted investigating the therapeutic benefits of various forms of brain entrainment, which may be visual, auditory or even tactile. 
-                While these therapies are not yet prescribed by clinicians, binaural beat audio is gaining an online following. Sites like idoser.net sell a vast range of tracks which promise anything from improved focus to the hallucinogenic effects of popular illegal drugs. <sup>7</sup>
+                While these therapies are not yet prescribed by clinicians, binaural beat audio is gaining an online following. Sites like <a target="_blank" rel="noopener noreferrer" href="https://idoser.net/">idoser.net</a> sell a vast range of tracks which promise anything from improved focus to the hallucinogenic effects of popular illegal drugs. <sup>7</sup>
                 Binaural beat music can also be found on Youtube.
                 <br>
                 <br>
