--- a/Shepard_tone.html
+++ b/Shepard_tone.html
@@ -25,7 +25,7 @@
                 <a href="Timbre_illusion.html">Timbre Illusion</a>
                 <a href="DPOAE.html">DPOAE</a>
                 <a href="Continuity_illusion.html">Continuity Illusion</a>
-                <a href="Timing_seq.html">Timing and Sequence Illusion</a>
+                <a href="Timing_seq.html">Timing and Sequence Perception</a>
                 <a href="Galloping.html">Galloping Rhythm</a>
                 <a href="Interleaved_melodies.php">Interleaved Melodies</a>
                 <a href="Binaural_beats.html">Binaural Beats</a>
