--- a/Timbre_illusion.html
+++ b/Timbre_illusion.html
@@ -26,7 +26,7 @@
                 <a href="Timbre_illusion.html">Timbre Illusion</a>
                 <a href="DPOAE.html">DPOAE</a>
                 <a href="Continuity_illusion.html">Continuity Illusion</a>
-                <a href="Timing_seq.html">Timing and Sequence Illusion</a>
+                <a href="Timing_seq.html">Timing and Sequence Perception</a>
                 <a href="Galloping.html">Galloping Rhythm</a>
                 <a href="Interleaved_melodies.php">Interleaved Melodies</a>
                 <a href="Binaural_beats.html">Binaural Beats</a>
@@ -53,7 +53,7 @@
                 <br>
                 <br>
                 <br>
-                <b>How does this work? </b> 
+                <b>How does this work?</b> 
                 <br>
                 Generally, we assume that our brain group different notes based on their frequency or by their location and often this is correct. 
                 In this instance, Wessel demonstrated that the brain groups the notes based on their timbre.
