--- a/overview_page.html
+++ b/overview_page.html
@@ -28,7 +28,7 @@
                 <a href="Timbre_illusion.html">Timbre Illusion</a>
                 <a href="DPOAE.html">DPOAE</a>
                 <a href="Continuity_illusion.html">Continuity Illusion</a>
-                <a href="Timing_seq.html">Timing and Sequence Illusion</a>
+                <a href="Timing_seq.html">Timing and Sequence Perception</a>
                 <a href="Galloping.html">Galloping Rhythm</a>
                 <a href="Interleaved_melodies.php">Interleaved Melodies</a>
                 <a href="Binaural_beats.html">Binaural Beats</a>
@@ -114,9 +114,9 @@
             </div>
 
             <div class="seq">
-                <button formaction="Timing_seq.html.html" class="btn">
+                <button formaction="Timing_seq.html" class="btn">
                     <img src="img/timing_icon.png" style="height:5vw">
-                    <p>Timing and Sequence Illusion</p>
+                    <p>Timing and Sequence Perception</p>
                 </button>
             </div>
 
