--- a/overview_page.html
+++ b/overview_page.html
@@ -114,10 +114,12 @@
             </div>
 
             <div class="seq">
-                <button formaction="Timing_seq.html" class="btn">
-                    <img src="img/timing_icon.png" style="height:5vw">
-                    <p>Timing and Sequence Perception</p>
-                </button>
+                <form>
+                    <button formaction="Timing_seq.html" class="btn">
+                        <img src="img/timing_icon.png" style="height:5vw">
+                        <p>Timing and Sequence Perception</p>
+                    </button>
+                </form>
             </div>
 
             <div class="gal">
