--- a/Continuity_illusion.html
+++ b/Continuity_illusion.html
@@ -26,6 +26,8 @@
                 <a href="Timbre_illusion.html">Timbre Illusion</a>
                 <a href="DPOAE.html">DPOAE</a>
                 <a href="Continuity_illusion.html">Continuity Illusion</a>
+                <a href="Timing_seq.html">Timing and Sequence Perception</a>
+                <a href="Galloping.html">Galloping Rhythm</a>
                 <a href="Interleaved_melodies.php">Interleaved Melodies</a>
                 <a href="Binaural_beats.html">Binaural Beats</a>
             </div>
@@ -76,6 +78,7 @@
                 With so many mechanisms in place to uphold this illusion it is clear it must serve a useful purpose to organisms. 
                 In fact the continuity illusion (also referred to as auditory induction or temporal restoration) is demonstrated across a wide range of species and is a well-conserved tool that enables us to make sense of sounds of interest when disrupted by immaterial background noise. 
                 This distinguishes it from other illusions, which may just be fascinating peculiarities, as it has been directly selected for and preserved throughout our evolution.
+                <br>
                 <br>
                 <br>
                 <b>Future applications of research in this area?</b>
