--- a/Shepard_tone.html
+++ b/Shepard_tone.html
@@ -33,7 +33,7 @@
         </div>
         <a class="navbarbtn" href="about_us.html">ABOUT US</a>
     </div>
-    <h1>Shepard's Tone</h1>
+    <h1>Shepard's Tones</h1>
     <h3>Illusion description</h3>
     <hr>
     <div class="gridcontainer">
