--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                         similar to how optical illusions allow us to see objects or shapes that are not present in an image.
                         <br>
                         <br>
-                        There are multiple examples of musical illusions that you may or may not notice in music pieces 
-                        like Tchaikovsky’s Passage and The Beethoven’s Leonore Overture or famous movies such as Dunkirk and The Dark Knight.
+                        There are multiple examples of musical illusions that you may or may not have noticed in music pieces 
+                        such as Tchaikovsky’s Passage and The Beethoven’s Leonore Overture, or famous movies such as Dunkirk and The Dark Knight.
                     </p>
                 </div>
                 <img src="img/scroll_icon.png" width="5%;">
@@ -40,9 +40,9 @@
                 
         <section class="page2">
                 <div class="box2">
-                    <p>One interesting fact about auditory illusion is that different people will have different perception for the same illusions. 
+                    <p>One interesting fact about auditory illusions is that different people have different perceptions for the same illusion. 
                         There is simply no right or wrong answer. 
-                        The factors that determine how you perceive auditory illusion include your neurological functions, psychological state, musical training, handedness and even the language that you speak.
+                        The factors that determine how you perceive auditory illusions include neurological functions, psychological state, musical training, handedness and even the language that you speak.
                         <br>
                         <br>
                         Hence, this website is created to allow you to explore auditory illusions and find out how your perceptions of illusions compare to that of others.
