--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         The factors that determine how you perceive auditory illusions include neurological functions, psychological state, musical training, handedness and even the language that you speak.
                         <br>
                         <br>
-                        Hence, this website is created to allow you to explore auditory illusions and find out how your perceptions of illusions compare to that of others.
+                        Hence, this website is created to allow you to explore auditory illusions and to find out how your perceptions of illusions compare to that of others.
                         <br>
                         <br>
                         Before we start, please take a moment to fill out a short survey form.
