--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="box2">
                     <p>
                         Auditory illusions, also known as auditory pareidolia, occur when misperceiving real acoustic stimuli. 
-                        This definition creates a distinction from auditory hallucinations, which are perceived in the absence of a stimulus.
+                        This differs from auditory hallucinations, which are perceived in the absence of a stimulus.
                         <br>
                         <br>
                         Auditory illusions allow us to perceive sounds which are not present in the stimulus, 
