--- a/DPOAE.html
+++ b/DPOAE.html
@@ -66,7 +66,7 @@
                 <br>
                 <br>
                 <figure>
-                    <img src="img/dp1.png">
+                    <img src="img/DPOAE.png">
                     <figcaption>Figure 1: Two frequencies are played (in blue) and a cubic distortion product (in red) is produced.</figcaption> 
                 </figure>
                 <br>
