Minor changes to images

--- a/DPOAE.html
+++ b/DPOAE.html
@@ -41,7 +41,7 @@
     <div class="gridcontainer">
         <div class="textbox">  
             <p>
-                <b>What is this? </b>
+                <b>What is this?</b>
                 <br>
                 Two tones are played, one is slightly higher in frequency than the other. 
                 Initially they both stay at the same frequency, then one tone rises in frequency whilst the other stays constant. 
@@ -66,8 +66,8 @@
                 <br>
                 <br>
                 <figure>
-                    <img src="img/DPOAE.png">
-                    <figcaption>Figure 1: Two frequencies are played (in blue) and a cubic distortion product (in red) is produced.</figcaption> 
+                    <img src="img/DPOAE-inverse.png">
+                    <figcaption>Figure 1: Two frequencies are played (in yellow and orange) and a cubic distortion product (in green) is produced.</figcaption>
                 </figure>
                 <br>
                 <br>
@@ -87,7 +87,7 @@
                 <br>
                 <br>
                 <figure>
-                    <img src="img/dp2.png">
+                    <img src="img/dp2-inverse.png">
                     <figcaption>Figure 2: Shows the structure within the cochlea. Particularly, the position of the basilar membrane and the hair cells.</figcaption> 
                 </figure>
                 <br>
