Minor changes to images

--- a/Shepard_tone.html
+++ b/Shepard_tone.html
@@ -66,7 +66,7 @@
                 One important underpinning of Shepard’s experiment was its basing on the helical model of pitch, which is most often understood to be how ‘high’ or ‘low’ a note sounds. This model contested the intuitive idea that as the frequency of a sound was increased, its pitch would increase in a linear fashion, and instead related pitch to frequency using a three-dimensional plot, shown in Figure 1.
                 <br>
                 <figure>
-                    <img src="img/asc1.png">
+                    <img src="img/asc1-inverse-removebg-preview.png">
                     <figcaption>Figure 1: The Helical Model of Pitch</figcaption>
                 </figure>
                 This suggests pitch has two defining aspects:
@@ -86,14 +86,14 @@
                 This creates the percept of tones with ambiguous pitch heights.
                 <br>
                 <figure>
-                    <img src="img/asc2.png">
+                    <img src="img/asc2-inverse.png">
                     <figcaption>Figure 2: Sound-pressure levels (dB) of the 10 simultaneously sounded components comprising one Shepard’s tone (black lines). The dotted lines represent the subsequent tone in the series, for which all components have been shifted upwards in frequency.</figcaption>
                 </figure>
                 <br>
                 Shepard described the findings of his experiment as endlessly traversing a pitch class circle, shown in Figure 3. This is a collapsed version of the helix from earlier. His research highlighted that, with the cue of pitch height somewhat obscured, most people tend to make judgements about pitch based on what he called ‘the proximity principle’. Listeners typically interpret a note as increasing in pitch if its most direct linkage to the note heard prior is made clockwise around the pitch class circle, and vice versa if anticlockwise.
                 <br>
                 <figure>
-                    <img src="img/asc3.png">
+                    <img src="img/asc3-inverse.png">
                     <figcaption>Figure 3: The Pitch Class Circle</figcaption>
                 </figure>
                 <br>
