--- a/Shepard_tone.html
+++ b/Shepard_tone.html
@@ -66,7 +66,7 @@
                 One important underpinning of Shepard’s experiment was its basing on the helical model of pitch, which is most often understood to be how ‘high’ or ‘low’ a note sounds. This model contested the intuitive idea that as the frequency of a sound was increased, its pitch would increase in a linear fashion, and instead related pitch to frequency using a three-dimensional plot, shown in Figure 1.
                 <br>
                 <figure>
-                    <img src="img/asc1-inverse-removebg-preview.png">
+                    <img src="img/asc1-inverse.png">
                     <figcaption>Figure 1: The Helical Model of Pitch</figcaption>
                 </figure>
                 This suggests pitch has two defining aspects:
