--- a/Scale_illusion.html
+++ b/Scale_illusion.html
@@ -44,7 +44,7 @@
                 <b>What is it?</b> 
                 <br>
                 An ascending scale and a descending scale are played simultaneously. 
-                The notes from the ascending scale alternate from left to right ear; the same occurs for the notes from the descending scale. 
+                The notes from the ascending scale alternate from one ear to another; the same occurs for the notes from the descending scale. 
                 Your brain may make order out of the chaos that is presented. 
                 <br>
                 <br>
