Included message to listeners

--- a/DPOAE.html
+++ b/DPOAE.html
@@ -46,7 +46,7 @@
                 Two tones are played, one is slightly higher in frequency than the other. 
                 Initially they both stay at the same frequency, then one tone rises in frequency whilst the other stays constant. 
                 When the tone begins to rise in pitch, listen for a faint mysterious tone that falls in pitch. 
-                This tone is produced by your own ear! 
+                This tone is produced by your own ear! This illusion should be heard with headphones.
                 <br>
                 <br>
                 <audio controls>
