--- a/Scale_illusion.html
+++ b/Scale_illusion.html
@@ -45,7 +45,7 @@
                 <br>
                 An ascending scale and a descending scale are played simultaneously. 
                 The notes from the ascending scale alternate from one ear to another; the same occurs for the notes from the descending scale. 
-                Your brain may make order out of the chaos that is presented. 
+                Your brain may make order out of the chaos that is presented. This illusion should be heard with headphones.
                 <br>
                 <br>
                 <audio controls>
