Included message to listeners

--- a/Binaural_beats.html
+++ b/Binaural_beats.html
@@ -42,7 +42,7 @@
             <p>
                 <b>What are they?</b>
                 <br>
-                Using headphones, the left and right ears are played continuous tones of slightly differing frequencies. 
+                Using headphones, the left and right ears are played continuous tones of slightly differing frequencies. This illusion should be heard with headphones.
                 <br>
                 <br>
                 <audio controls>
